Shorten sidebar labels

--- a/m365-toolkit/dashboard/index.html
+++ b/m365-toolkit/dashboard/index.html
@@ -119,7 +119,7 @@ License: MIT
                         <li class="nav-item">
                             <a href="#license-analysis" class="nav-link" data-page="license-analysis" aria-label="License Overlap Analysis">
                                 <span class="nav-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2v4m0 12v4M4.93 4.93l2.83 2.83m8.48 8.48l2.83 2.83M2 12h4m12 0h4M4.93 19.07l2.83-2.83m8.48-8.48l2.83-2.83"></path><circle cx="12" cy="12" r="4"></circle></svg></span>
-                                <span class="nav-text">Overlap Analysis</span>
+                                <span class="nav-text">Overlap</span>
                             </a>
                         </li>
                     </ul>
@@ -147,7 +147,7 @@ License: MIT
                         <li class="nav-item">
                             <a href="#conditional-access" class="nav-link" data-page="conditional-access" aria-label="Conditional Access">
                                 <span class="nav-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path><path d="M9 12l2 2 4-4"></path></svg></span>
-                                <span class="nav-text">Conditional Access</span>
+                                <span class="nav-text">CA</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -221,7 +221,7 @@ License: MIT
                         <li class="nav-item">
                             <a href="#compliance-policies" class="nav-link" data-page="compliance-policies" aria-label="Compliance Policies">
                                 <span class="nav-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg></span>
-                                <span class="nav-text">Compliance Policies</span>
+                                <span class="nav-text">Compliance</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -233,7 +233,7 @@ License: MIT
                         <li class="nav-item">
                             <a href="#windows-update" class="nav-link" data-page="windows-update" aria-label="Windows Update">
                                 <span class="nav-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="23 4 23 10 17 10"></polyline><path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"></path></svg></span>
-                                <span class="nav-text">Windows Update</span>
+                                <span class="nav-text">Updates</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -245,7 +245,7 @@ License: MIT
                         <li class="nav-item">
                             <a href="#app-deployments" class="nav-link" data-page="app-deployments" aria-label="App Deployments">
                                 <span class="nav-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg></span>
-                                <span class="nav-text">App Deployments</span>
+                                <span class="nav-text">Apps</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -257,7 +257,7 @@ License: MIT
                         <li class="nav-item">
                             <a href="#enterprise-apps" class="nav-link" data-page="enterprise-apps" aria-label="Enterprise Apps">
                                 <span class="nav-icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg></span>
-                                <span class="nav-text">Enterprise Apps</span>
+                                <span class="nav-text">Enterprise</span>
                             </a>
                         </li>
                     </ul>
