--- a/m365-toolkit/dashboard/index.html
+++ b/m365-toolkit/dashboard/index.html
@@ -410,6 +410,7 @@ License: MIT
     <script src="js/data-bundle.js"></script>
     <script src="js/data-loader.js"></script>
     <script src="js/data-relationships.js"></script>
+    <script src="js/entity-index.js"></script>
     <script src="js/toast.js"></script>
     <script src="js/action-utils.js"></script>
     <script src="js/filter-chips.js"></script>
