Add user 360 page (hidden route)

--- a/m365-toolkit/dashboard/index.html
+++ b/m365-toolkit/dashboard/index.html
@@ -428,6 +428,7 @@ License: MIT
     <script src="js/keyboard-shortcuts.js"></script>
     <script src="js/page-overview.js"></script>
     <script src="js/page-users.js"></script>
+    <script src="js/page-user-360.js"></script>
     <script src="js/page-licenses.js"></script>
     <script src="js/page-guests.js"></script>
     <script src="js/page-security.js"></script>
